--- a/src/components/Scss/AboutUs.scss
+++ b/src/components/Scss/AboutUs.scss
@@ -49,12 +49,14 @@
 
     .states-aboutUs {
         .state-number{
+            font-size: 1.5rem;
             margin: 0;
             padding: 0;
             color: #001E6C;
             font-weight: bold;
         }
         .state-text{
+            font-size: 1.5rem;
             margin: 0;
             padding: 0;
             color: #035397;
