--- a/src/components/Scss/OurWorks.scss
+++ b/src/components/Scss/OurWorks.scss
@@ -1,4 +1,24 @@
 .OurWorks{
-    .Carousel-box{
-    }
+}
+
+.Our-works-title{
+    text-align: center;
+    font-size: 2.5rem;
+    color: #035397;
+    font-weight: bold;
+}
+.collage-box{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2vh;
+}
+.OurWorks-carrousel{
+}
+.car-img{
+    object-fit: contain;
+    max-width: 30vw;
+    border-radius: 30px;
+    @media screen and (max-width: 1100px) {
+        max-width: 35vw;
+       }
 }
