--- a/src/components/Scss/AboutUs.scss
+++ b/src/components/Scss/AboutUs.scss
@@ -11,6 +11,10 @@
     display: flex;
     justify-content: space-evenly;
     align-items: first baseline;
+    @media screen and (max-width: 550px) {
+        display: none;
+       }
+
 
     .left-top-aboutUs{
         display: flex;
@@ -31,9 +35,7 @@
                @media screen and (max-width: 690px) {
                 font-size: 2rem;
                }
-               @media screen and (max-width: 550px) {
-                font-size: 1.2rem;
-               }
+
 
                
         }
@@ -46,12 +48,7 @@
                @media screen and (max-width: 690px) {
                 font-size: 1.2rem;
                }
-               @media screen and (max-width: 550px) {
-                font-size: 1rem;
-               }
-               @media screen and (max-width: 380px) {
-                font-size: 0.8rem;
-               }
+
         }
     }
     .right-top-aboutUs{
@@ -69,12 +66,7 @@
                    @media screen and (max-width: 690px) {
                     font-size: 1.2rem;
                    }
-                   @media screen and (max-width: 550px) {
-                    font-size: 1rem;
-                   }
-                   @media screen and (max-width: 550px) {
-                    font-size: 0.8rem;
-                   }
+
             }
         }
     }
