--- a/src/components/Scss/Header.scss
+++ b/src/components/Scss/Header.scss
@@ -3,6 +3,11 @@
     margin-top: 2vh;
     justify-content: space-around;
     align-items: baseline;
+    @media screen and (max-width: 550px) {
+        align-items: flex-start;
+        padding: 1vh;
+       }
+
     .Logo{
         img{
             object-fit: contain;
@@ -20,6 +25,10 @@
         @media screen and (max-width: 768px) {
             font-size: 1.2rem;
            }
+           @media screen and (max-width: 550px) {
+            display: none;
+           }
+
         .link{
             margin: 0 2vw;
             list-style: none;
@@ -28,7 +37,110 @@
             
         }
     }
+    .Mob-menu{
+        display: none;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        .Mob-Titles{
+            margin-left: 2vw;
+        .title-aboutUs{
+            margin: 0;
+            padding: 0;
+            font-size: 1.2rem;
+            color: #035397;
+
+        }
+        .description-aboutUs{
+            font-size: 0.9rem;
+            color: #5089C6;
+
+        }
+        }
+        .Mob-Menu-Button{
+            align-self: flex-start;
+            font-size: 2rem;
+            color: #001E6C;
+        }
+
+        @media screen and (max-width: 550px) {
+            display: flex;
+           }
+           .Mob-Menu-Box{
+            .Close-Mob{
+                position: absolute;
+                top: 1vh;
+                font-size: 2rem;
+                border-radius: 50%;
+                background: #5089C6;
+                left: -5vw;
+            }
+            display: flex;
+            align-items: flex-start;
+            justify-content: space-between;
+            flex-direction: column;
+            background: #DCE7F4;
+            padding: 3vw;
+            position: fixed;
+            top: 0;
+            right: -70vw;
+            height: 100%;
+            max-width: 60vw;
+            border-radius: 16px 0 0 0;
+            z-index: 1000;
+            transition: right 0.5s ease-in-out;
+            .Mob-Menu-Top{
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                gap: 2vw;
+                border-bottom: 2px solid orange;
+                img{
+                    width: 18vw;
+                }
+                .Mob-Menu-Title{
+                    color: #001E6C;
+                    font-size: 1rem;
+                }
+            }
+            .Mob-Menu-Mid{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                margin: auto;
+
+                .Mob-Menu-Links{
+                    display: flex;
+                    margin: 5vh auto;
+                    flex-direction: column;
+                    justify-content: space-evenly;
+                    align-items: center;
+                    font-size: 1.5rem;
+                    height: 50vh;
+                    a{
+                        text-decoration: none;
+                        list-style: none;
+                        color: #5089C6;
+                    }
+                }
+            }
+
+            .Mob-Menu-Footer{
+                display: flex;
+                flex-direction: column;
+                a{
+                    text-decoration: none;
+                    list-style: none;
+                    color: #001E6C;
+                }
+            }
+           }
+    }
 }
 .underlined-link{
     border-bottom: 2px solid #FFAA4C;
+}
+.show-mob-menu{
+    right: 0vh !important;
+
 }
