--- a/src/components/Scss/OurWorks.scss
+++ b/src/components/Scss/OurWorks.scss
@@ -20,5 +20,11 @@
     border-radius: 30px;
     @media screen and (max-width: 1100px) {
         max-width: 35vw;
+        border-radius: 15px;
+       }
+       @media screen and (max-width: 650px) {
+        max-width: 45vw;
+        border-radius: 5px;
+
        }
 }
