--- a/src/components/Scss/OurWorks.scss
+++ b/src/components/Scss/OurWorks.scss
@@ -8,23 +8,63 @@
     font-weight: bold;
 }
 .collage-box{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 2vh;
+    // display: grid;
+    // grid-template-columns: repeat(2, 1fr);
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    gap: 1vh;
+    overflow: hidden;
+    width: 80%;
 }
 .OurWorks-carrousel{
+    margin: auto;
+    height: 70%;
+    display: flex;
+    align-items: center;
+    // @media screen and (max-width: 780px) {
+    //     height: 60vh;
+    //    }
+    //    @media screen and (max-width: 650px) {
+    //     height: 50vh;
+
+    //    }
+
+    //    @media screen and (max-width: 550px) {
+    //     height: 35vh;
+
+    //    }
 }
 .car-img{
-    object-fit: contain;
-    max-width: 30vw;
+    margin: 0 auto;
+    width: 35%;
+    height: 300px;
     border-radius: 30px;
     @media screen and (max-width: 1100px) {
-        max-width: 35vw;
+        width: 45%;
         border-radius: 15px;
        }
-       @media screen and (max-width: 650px) {
-        max-width: 45vw;
-        border-radius: 5px;
+       @media screen and (max-width: 780px) {
+        width: 45%;
+        border-radius: 10px;
+        height: 250px;
 
        }
+       @media screen and (max-width: 650px) {
+        width: 45%;
+        border-radius: 5px;
+        height: 100%;
+
+
+       }
+}
+.nav-arrow{
+    color: orange;
+    font-size: 40px;
+    position: relative;
+    margin: 0 5vw;
+    display: none;
 }
