--- a/src/components/Scss/AboutUs.scss
+++ b/src/components/Scss/AboutUs.scss
@@ -76,7 +76,9 @@
     border: 2px solid #FFAA4C;
    }
    .bot-aboutUS{
+    width: 100%;
     display: flex;
+    justify-content: space-evenly;
     margin: auto;
     justify-content: space-evenly;
     @media screen and (max-width: 800px) {
@@ -100,6 +102,7 @@
                }
         }
         .state-text{
+            word-wrap: break-word;
             font-size: 1.5rem;
             margin: 0;
             padding: 0;
