--- a/src/components/Scss/Calculator.scss
+++ b/src/components/Scss/Calculator.scss
@@ -142,10 +142,9 @@
 
   .Design-Quest {
     margin: auto;
-    margin-top: 5vh;
     display: flex;
-    justify-content: space-around;
-    align-items: baseline;
+    flex-direction: column;
+    align-items: center;
     @media screen and (max-width: 768px) {
       align-items: center;
      }
@@ -154,6 +153,12 @@
      }
 
     .Design-Question {
+      text-align: center;
+      margin: 0;
+      margin-top: -1vh;
+      padding: 0;
+      align-items: center;
+      max-width: 25vw;
       font-size: 2rem;
       color: #5089c6;
       @media screen and (max-width: 768px) {
@@ -173,12 +178,17 @@
       margin: 0 100px;
       border-radius: 8px;
       font-size: 1.5rem;
+
       @media screen and (max-width: 550px) {
         font-size: 1.1rem;
         margin: 0;
         padding: 0;
         padding: 6px 10px;
        }
+    }
+    .design-check{
+      border: 2px solid #1f65af;
+      outline: 2px solid #89add3;
     }
   }
 
@@ -198,6 +208,7 @@
   }
 
   .select-pocket {
+    margin-top: 5vh;
     width: 100%;
     display: flex;
     justify-content: space-between;
